-set position of navigation to fixed -set width of navigation to 15% -navigation is now scrollable on the y-axis and cliped/ cut off on the x-axis

--- a/src/main/resources/site/css/style.css
+++ b/src/main/resources/site/css/style.css
@@ -81,6 +81,7 @@ section {
 	clear: both;
 	text-align: center;
 	padding: 5px;
+	margin-top:1em;
 }
 
 a:hover, a:focus {
@@ -158,7 +159,12 @@ td.entry-key {
 
 #navigation {
 	float: left;
-	position: absolute;
+	position: fixed;
+	white-space: nowrap; 
+    overflow: scroll;
+	overflow-x: hidden;
+    z-index:5;
+	width:15%;
 }
 
 #search_me {
